--- a/index.html
+++ b/index.html
@@ -3,18 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>eli5-universe-builder</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>eli5-explain like I am 5</title>
+    <meta name="description" content="ELI5" />
+    <meta name="author" content="Siddhesh" />
 
     <meta property="og:title" content="eli5-universe-builder" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:description" content="ELI5" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@siddhesh" />
   </head>
 
   <body>
